# tuya-web

./: Cargo.toml  Dockerfile  README.md  config.yaml
.github/workflows/: docker.yml
src/: main.rs  outlet.rs
