[package]
name = "tuya-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.22"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
rust-async-tuyapi = "1.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
